fixed whitespace under the body when viewed on mobile

--- a/src/app/components/app.less
+++ b/src/app/components/app.less
@@ -99,6 +99,8 @@ li a:hover, li a:active {
 	display: flex;
 	flex-grow: 1;
 	font-weight: 600;
+	margin: 0 auto;
+	overflow: hidden;
 }
 #footer ul{
 	display: flex;
@@ -117,10 +119,17 @@ li a:hover, li a:active {
 	display: flex;
 	justify-content: center;
 	background-color: #fff;
+	min-height: calc(100vh - 100px);
 }
 
 /*Tablet*/
 	@media only screen and (max-width: 520px){
+
+			body, html {
+			/* height: 100%!important; */
+			overflow: auto!important;
+			max-height: 100% !important;
+			}
 			#footer ul{
 				flex-direction: column;
 				font-size: 2.0em;
